--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body bgcolor="#FFFEF1">
 
 
-    <!--<header class="headhgjher">-->
+    <!--<header class="heading">-->
     <div class="container">
         <div class="header__inner">
             <!-- Верхняя панель (сделать полупрозрачной)-->
